<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name" translatable="false">BaseProject</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="splash">Splash</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="todo">TODO</string>
    <string name="log_in">Log in</string>
    <string name="forget_password">Forget password?</string>
    <string name="don_t_have_account">Don\'t have account? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_name">YOUR NAME</string>
    <string name="i_agee_to_the_terms_of_service_and_privacy_policy">I agee to the Terms and Privacy Policy</string>
    <string name="have_an_account_log_in">Have an account? Log in</string>
    <string name="invalid_email_address">invalid email address</string>
    <string name="do_not_leave_this_field_blank">do not leave this field blank</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="email_is_not_registered">Email is not registered</string>
    <string name="email_or_password_is_empty">Email or password is empty</string>
    <string name="password_is_incorrect">Password is incorrect</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="login_failed">Login failed</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="sign_up_failed">Please enter your name</string>
    <string name="sign_up_successfully">Sign up successfully</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="message">Message</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="notification">Notification</string>
    <string name="version">Version</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="birth_day">Birth day</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="this_chat_app_privacy_policy">This chat app Privacy Policy.</string>
    <string name="this_chat_app_terms_and_conditions">This chat app Terms and Conditions.</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="terms">Terms</string>
    <string name="all">All</string>
    <string name="requests">Requests</string>
    <string name="search_friends_here">Search friends here</string>
    <string name="add_friend">Add</string>
    <string name="request_sent">Added</string>
    <string name="cancel_request">Cancel</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="all_requests">All Requests</string>
    <string name="sent_requests">Sent Requests</string>
    <string name="messages">Messages</string>
    <string name="search_messages_here">Search messages here</string>
    <string name="no_result_found">No result found</string>
    <string name="type_a_message">Type a message</string>
    <string name="you_sent_an_image">Sent an image</string>
    <string name="send">Send</string>
    <string name="request_permission">Request Permission</string>
    <string name="you_sent_an_emoji">Sent an emoji</string>
    <string name="you">You</string>
</resources>