<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_edit_profile"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/editProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/edit_profile"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/backArrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.471"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/backArrow"
                app:layout_constraintVertical_bias="0.0"/>

            <TextView
                android:id="@+id/tx_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/backArrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/backArrow" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_profile_menu"
            android:backgroundTint="#F4F4F4"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1"
                android:paddingBottom="35dp"/>

            <ImageView
                android:id="@+id/edit_profile_picture_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle"
                android:padding="8dp"
                android:textSize="15sp"
                android:src="@drawable/ic_camera_profile"
                app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
                app:layout_constraintEnd_toEndOf="@+id/img_avatar"
                app:layout_constraintStart_toStartOf="@+id/img_avatar"
                app:layout_constraintTop_toTopOf="@+id/img_avatar"
                app:tint="@color/white"
                app:layout_constraintVertical_bias="0.8"
                app:layout_constraintHorizontal_bias="0.9"/>

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/guideline3"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1"/>

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/guideline4"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9"/>

            <TextView
                android:id="@+id/tx_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#999"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/img_avatar"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintVertical_bias="0.4"/>

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableRight="@drawable/ic_user"
                android:hint="@string/name"
                android:textColor="#000"
                android:textColorHint="#999"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/guideline4"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/tx_name" />

            <TextView
                android:id="@+id/tx_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="#999"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/edt_name"
                app:layout_constraintVertical_bias="0.4"/>

            <EditText
                android:id="@+id/edt_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="#999"
                android:textSize="18sp"
                android:paddingVertical="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/guideline4"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/tx_phone_number"
                app:layout_constraintVertical_bias="0.4"
                android:drawableEnd="@drawable/ic_phone"/>

            <TextView
                android:id="@+id/tx_birth_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_day"
                android:textColor="#999"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/edt_phone_number"
                app:layout_constraintVertical_bias="0.4"/>

            <EditText
                android:id="@+id/edt_birth_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/birth_day"
                android:inputType="date"
                android:textColor="@color/black"
                android:textColorHint="#999"
                android:textSize="18sp"
                android:paddingVertical="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/guideline4"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/tx_birth_day"
                app:layout_constraintVertical_bias="0.4"
                android:drawableEnd="@drawable/ic_birthday"/>


        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>